--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.0.7'
-    ext.kotlin_version = "1.1.1"
+
+    ext.kotlin_version = "1.1.3"
+    //ext.coroutines_version = '0.16'
 
     repositories {
         jcenter()
