--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.1.3"
+    ext {
+        kotlin_version = "1.1.3"
+        android_build_version = "3.0.0-alpha4"
+    }
 
     repositories {
         jcenter()
-
+        maven {
+            url 'https://maven.google.com'
+        }
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
-        classpath 'com.google.gms:google-services:3.0.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.firebase:firebase-plugins:1.1.0'
 
+    dependencies {
+        classpath files("app/tools/kotlin-serialization-gradle.jar")
+
+        classpath "com.android.tools.build:gradle:$android_build_version"
+        classpath 'com.google.gms:google-services:3.1.0'
+        classpath 'com.google.firebase:firebase-plugins:1.1.0'
+        classpath 'com.google.guava:guava:22.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
