Rebase and fix some bugs
The gradle upgrade has been included and some problems have been fixed.
That includes file access that could be interrupted by exceptions
resulting in unreadable files.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: "idea"
 apply plugin: "com.android.application"
 apply plugin: 'com.google.firebase.firebase-perf'
 apply plugin: "kotlin-android"
-apply plugin: "kotlin-serialization"
 
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
@@ -182,3 +181,7 @@ dependencies {
 }
 
 apply plugin: "com.google.gms.google-services"
+apply plugin: 'com.google.firebase.firebase-perf'
+repositories {
+    mavenCentral()
+}
