Add missing libraries
(cherry picked from commit 01c2632)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -170,6 +170,9 @@ dependencies {
     // Font awesome
     compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.1'
 
+    // Serialization
+    compile files("tools/kotlin-serialization-runtime.jar")
+
     testCompile "junit:junit:$junit_version"
 }
 
