--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,5 +77,7 @@
         <receiver android:name=".broadcast.EventFavoriteBroadcast" />
 
         <receiver android:name=".broadcast.LoginReceiver" />
+
+        <receiver android:name=".broadcast.LogoutReceiver"/>
     </application>
 </manifest>
