--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "idea"
 apply plugin: "com.android.application"
 apply plugin: "kotlin-android"
+apply plugin: 'io.fabric'
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
@@ -95,7 +96,7 @@ ext {
     volley_version = "1.0.0"
     junit_version = "4.8.1"
     android_support_version = "25.3.1"
-    google_play_version = "11.0.1"
+    google_play_version = "15.0.0"
     fuel_version = "1.8.0"
 }
 
@@ -132,9 +133,8 @@ dependencies {
     // Firebase
     compile "com.google.firebase:firebase-messaging:$google_play_version"
     compile "com.google.firebase:firebase-config:$google_play_version"
-    compile "com.google.firebase:firebase-crash:$google_play_version"
     compile "com.google.firebase:firebase-perf:$google_play_version"
-
+    compile 'com.crashlytics.sdk.android:crashlytics:2.9.1'
 
     // Photoview
     compile 'com.github.chrisbanes:PhotoView:2.0.0'
@@ -163,9 +163,6 @@ dependencies {
     // Preferences
     compile "com.chibatching.kotpref:kotpref:2.1.1"
     compile "com.chibatching.kotpref:enum-support:2.1.1"
-
-    //  Circular progress that don't make me consider suicide
-    compile 'com.github.lzyzsd:circleprogress:1.2.1'
 
     // Fuel for networking
     compile "com.github.kittinunf.fuel:fuel:$fuel_version" //for JVM
