--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,16 @@ buildscript {
 
     repositories {
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
 
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.google.gms:google-services:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.firebase:firebase-plugins:1.1.0'
         classpath files("app/tools/kotlin-serialization-gradle.jar")
+        classpath 'io.fabric.tools:gradle:1.25.1'
     }
 }
 
@@ -20,6 +22,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
+        maven { url 'https://maven.google.com/' }
     }
 }
 
