refactor(announcements): rewrite announcements for modern age
moev announcement recycler to a specfic fragment and add a detail view for announcements. Also
attach this to an observable so data is up to date

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -171,6 +171,9 @@ dependencies {
     // Font awesome
     compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.1'
 
+    // Observables
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
+
     // Serialization
     compile files("tools/kotlin-serialization-runtime.jar")
 
