--- a/app/build.gradle
+++ b/app/build.gradle
@@ -174,6 +174,9 @@ dependencies {
     // Observables
     compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
 
+    // Pretty time
+    compile group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '3.2.7.Final'
+
     // Serialization
     compile files("tools/kotlin-serialization-runtime.jar")
 
