--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.1.3"
+    ext.serialization_version = '0.5.1'
+    ext.kotlin_version = "1.2.50"
 
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
-
+        maven { url "https://kotlin.bintray.com/kotlinx" }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         classpath 'com.google.gms:google-services:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlinx:kotlinx-gradle-serialization-plugin:$serialization_version"
         classpath 'com.google.firebase:firebase-plugins:1.1.0'
-        classpath files("app/tools/kotlin-serialization-gradle.jar")
         classpath 'io.fabric.tools:gradle:1.25.1'
     }
 }
@@ -22,7 +24,8 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
-        maven { url 'https://maven.google.com/' }
+        maven { url "https://kotlin.bintray.com/kotlinx" }
+        google()
     }
 }
 
