--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,12 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 
 android {
 
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion "26.0.1"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 99
         versionName "2.2.9"
         multiDexEnabled true
@@ -98,7 +98,7 @@ ext {
     httpmime_version = "4.5.2"
     volley_version = "1.0.0"
     junit_version = "4.8.1"
-    android_support_version = "25.3.1"
+    android_support_version = "26+"
     google_play_version = "12.0.1"
     fuel_version = "1.8.0"
 }
@@ -113,12 +113,13 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile "com.android.support:appcompat-v7:$android_support_version"
-    compile "com.android.support:design:$android_support_version"
+    compile "com.android.support:recyclerview-v7:$android_support_version"
+    compile "com.android.support:cardview-v7:$android_support_version"
+    compile "com.android.support:recyclerview-v7:$android_support_version"
     compile "com.android.support:support-v4:$android_support_version"
     compile "com.android.support:cardview-v7:$android_support_version"
-    compile "com.android.support:recyclerview-v7:$android_support_version"
-    compile "com.android.support:cardview-v7:$android_support_version"
-    compile "com.android.support:recyclerview-v7:$android_support_version"
+    compile "com.android.support:design:$android_support_version"
+
     compile "com.android.support.constraint:constraint-layout:1.1.2"
     compile "com.android.support:multidex:1.0.1"
     compile "net.danlew:android.joda:2.9.4.2"
@@ -154,7 +155,6 @@ dependencies {
     // DSL for views
     compile "org.jetbrains.anko:anko-sdk15:$anko_version" // sdk19, sdk21, sdk23 are also available
     compile "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
-    compile "org.jetbrains.anko:anko-support-v4:$anko_version" // In case you need support-v4 bindings
     compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version" // For appcompat-v7 bindings
     compile "org.jetbrains.anko:anko-coroutines:$anko_version"
     compile "org.jetbrains.anko:anko-design:$anko_version"
@@ -188,6 +188,7 @@ dependencies {
     compile files("tools/kotlin-serialization-runtime.jar")
 
     testCompile "junit:junit:$junit_version"
+    compile 'android.arch.navigation:navigation-fragment:+'
 }
 
 apply plugin: "com.google.gms.google-services"
