start fixing build errors on upgrades to major libraries

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,8 @@
 
         <activity android:name=".ui.ActivitySettings"/>
 
+        <activity android:name=".ui.NavActivity" />
+
         <activity android:name=".ui.LoginActivity" />
 
         <!-- Service providing a detached retrieval of data from the internet. -->
