--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: "idea"
 apply plugin: "com.android.application"
 apply plugin: "kotlin-android"
 apply plugin: 'io.fabric'
+apply plugin: 'kotlinx-serialization'
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
@@ -11,9 +12,8 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 }
 
 android {
-
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "26.0.3"
 
     defaultConfig {
         minSdkVersion 16
@@ -25,6 +25,8 @@ android {
         buildConfigField "String", "API_BASE_URL", '"https://app.eurofurence.org"'
         buildConfigField "String", "CONVENTION_IDENTIFIER", '"EF25"'
     }
+
+    flavorDimensions "what"
 
     dexOptions {
         javaMaxHeapSize "4g"
@@ -74,11 +76,13 @@ android {
             // dev utilizes minSDKVersion = 21 to allow the Android gradle plugin
             // to pre-dex each module and produce an APK that can be tested on
             // Android Lollipop without time consuming dex merging processes.
+            dimension "what"
             minSdkVersion 21
             applicationId "org.eurofurence.connavigator.debug"
         }
         prod {
             // The actual minSdkVersion for the application.
+            dimension "what"
             minSdkVersion 16
             applicationId "org.eurofurence.connavigator"
         }
@@ -101,94 +105,98 @@ ext {
     android_support_version = "26+"
     google_play_version = "12.0.1"
     fuel_version = "1.8.0"
+    nav_version = "1.0.0-alpha07"
 }
 
 // Embedded swagger
 apply from: "swagger.gradle"
 
 dependencies {
-    testCompile "junit:junit:4.12"
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testImplementation "junit:junit:4.12"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    compile "com.android.support:appcompat-v7:$android_support_version"
-    compile "com.android.support:recyclerview-v7:$android_support_version"
-    compile "com.android.support:cardview-v7:$android_support_version"
-    compile "com.android.support:recyclerview-v7:$android_support_version"
-    compile "com.android.support:support-v4:$android_support_version"
-    compile "com.android.support:cardview-v7:$android_support_version"
-    compile "com.android.support:design:$android_support_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "com.android.support:appcompat-v7:$android_support_version"
+    implementation "com.android.support:recyclerview-v7:$android_support_version"
+    implementation "com.android.support:cardview-v7:$android_support_version"
+    implementation "com.android.support:recyclerview-v7:$android_support_version"
+    implementation "com.android.support:support-v4:$android_support_version"
+    implementation "com.android.support:cardview-v7:$android_support_version"
+    implementation "com.android.support:design:$android_support_version"
 
-    compile "com.android.support.constraint:constraint-layout:1.1.2"
-    compile "com.android.support:multidex:1.0.1"
-    compile "net.danlew:android.joda:2.9.4.2"
-    compile "joda-time:joda-time:2.9.2:no-tzdb"
-    compile "io.swagger:swagger-annotations:$swagger_annotations_version"
-    compile "com.google.code.gson:gson:$gson_version"
+    implementation "com.android.support.constraint:constraint-layout:1.1.2"
+    implementation "com.android.support:multidex:1.0.1"
+    implementation "net.danlew:android.joda:2.9.4.2"
+    implementation "joda-time:joda-time:2.9.2:no-tzdb"
+    implementation "io.swagger:swagger-annotations:$swagger_annotations_version"
+    implementation "com.google.code.gson:gson:$gson_version"
 
-    compile "com.android.volley:volley:${volley_version}"
-    compile "com.nostra13.universalimageloader:universal-image-loader:1.9.5"
+    implementation "com.android.volley:volley:${volley_version}"
+    implementation "com.nostra13.universalimageloader:universal-image-loader:1.9.5"
 
-    compile "org.apache.httpcomponents:httpcore:$httpcore_version"
-    compile ("org.apache.httpcomponents:httpmime:$httpmime_version") {
+    implementation "org.apache.httpcomponents:httpcore:$httpcore_version"
+    implementation ("org.apache.httpcomponents:httpmime:$httpmime_version") {
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
 
     // Firebase
-    compile "com.google.firebase:firebase-messaging:$google_play_version"
-    compile "com.google.firebase:firebase-config:$google_play_version"
-    compile "com.google.firebase:firebase-perf:$google_play_version"
-    compile 'com.crashlytics.sdk.android:crashlytics:2.9.1'
+    implementation "com.google.firebase:firebase-messaging:$google_play_version"
+    implementation "com.google.firebase:firebase-config:$google_play_version"
+    implementation "com.google.firebase:firebase-perf:$google_play_version"
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.1'
 
     // Photoview
-    compile 'com.github.chrisbanes:PhotoView:2.1.3'
-    compile 'us.feras.mdv:markdownview:1.1.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'us.feras.mdv:markdownview:1.1.0'
 
     // Promises
-    compile 'nl.komponents.kovenant:kovenant-core:3.3.0'
-    compile 'nl.komponents.kovenant:kovenant-android:3.3.0'
-    compile 'nl.komponents.kovenant:kovenant-combine:3.3.0'
-    compile 'nl.komponents.kovenant:kovenant-jvm:3.3.0'
-    compile 'nl.komponents.kovenant:kovenant-functional:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-core:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-android:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-combine:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-jvm:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-functional:3.3.0'
 
     // DSL for views
-    compile "org.jetbrains.anko:anko-sdk15:$anko_version" // sdk19, sdk21, sdk23 are also available
-    compile "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
-    compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version" // For appcompat-v7 bindings
-    compile "org.jetbrains.anko:anko-coroutines:$anko_version"
-    compile "org.jetbrains.anko:anko-design:$anko_version"
+    implementation "org.jetbrains.anko:anko-sdk15:$anko_version" // sdk19, sdk21, sdk23 are also available
+    implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
+    implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version" // For appcompat-v7 bindings
+    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
+    implementation "org.jetbrains.anko:anko-design:$anko_version"
 
     // Kandroid for easier components
-    compile 'com.pawegio.kandroid:kandroid:0.7.0@aar'
+    implementation 'com.pawegio.kandroid:kandroid:0.7.0@aar'
 
     //  Circular progress that don't make me consider suicide
-    compile 'com.github.lzyzsd:circleprogress:1.2.1'
+    implementation 'com.github.lzyzsd:circleprogress:1.2.1'
     // Circle progress that actually animates!
-    compile 'com.github.jakob-grabner:Circle-Progress-View:v1.3'
+    implementation 'com.github.jakob-grabner:Circle-Progress-View:v1.3'
 
     // Preferences
-    compile "com.chibatching.kotpref:kotpref:2.1.1"
-    compile "com.chibatching.kotpref:enum-support:2.1.1"
+    implementation "com.chibatching.kotpref:kotpref:2.1.1"
+    implementation "com.chibatching.kotpref:enum-support:2.1.1"
 
     // Fuel for networking
-    compile "com.github.kittinunf.fuel:fuel:$fuel_version" //for JVM
-    compile "com.github.kittinunf.fuel:fuel-android:$fuel_version" //for Android
+    implementation "com.github.kittinunf.fuel:fuel:$fuel_version" //for JVM
+    implementation "com.github.kittinunf.fuel:fuel-android:$fuel_version" //for Android
 
     // Font awesome
-    compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.1'
+    implementation 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.1'
 
     // Observables
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 
     // Pretty time
-    compile group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '3.2.7.Final'
+    implementation group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '3.2.7.Final'
 
     // Serialization
-    compile files("tools/kotlin-serialization-runtime.jar")
+    implementation files("tools/kotlin-serialization-runtime.jar")
 
-    testCompile "junit:junit:$junit_version"
-    compile 'android.arch.navigation:navigation-fragment:+'
+    testImplementation "junit:junit:$junit_version"
+
+    // Jetpack Nav
+    implementation "android.arch.navigation:navigation-fragment-ktx:$nav_version" // use -ktx for Kotlin
+    implementation "android.arch.navigation:navigation-ui-ktx:$nav_version" // use -ktx for Kotlin
 }
 
 apply plugin: "com.google.gms.google-services"
