--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.1.3"
+    ext.kotlin_version = "1.3.10"
 
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
-
+        google ()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.google.gms:google-services:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.firebase:firebase-plugins:1.1.0'
-        classpath files("app/tools/kotlin-serialization-gradle.jar")
-        classpath 'io.fabric.tools:gradle:1.25.1'
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
+        classpath 'io.fabric.tools:gradle:1.25.4'
     }
 }
 
