--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,19 @@
 
 buildscript {
     ext.kotlin_version = "1.3.10"
+    ext.serialization_version = '0.9.0'
 
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        maven { url "https://kotlin.bintray.com/kotlinx" }
         google ()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.google.gms:google-services:3.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.firebase:firebase-plugins:1.1.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.25.4'
     }
@@ -23,6 +25,7 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.google.com/' }
+        maven { url "https://kotlin.bintray.com/kotlinx" }
     }
 }
 
