--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: "com.android.application"
 apply plugin: 'io.fabric'
 apply plugin: "kotlin-android"
 apply plugin: 'kotlinx-serialization'
+apply plugin: "androidx.navigation.safeargs"
 
 android {
     compileSdkVersion 26
