--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.25.4'
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha08"
     }
 }
 
