--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ apply plugin: 'kotlinx-serialization'
 apply plugin: "androidx.navigation.safeargs"
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.3"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.0"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 29
         versionCode 99
         versionName "2.2.9"
         multiDexEnabled true
@@ -53,7 +53,7 @@ android {
     }
 
     defaultConfig {
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     testOptions {
@@ -91,12 +91,12 @@ ext {
     // Dependency versions
     swagger_annotations_version = "1.5.0"
     gson_version = "2.6.1"
-    anko_version = "0.10.1"
+    anko_version = "0.10.8"
     httpcore_version = "4.4.4"
     httpmime_version = "4.5.2"
     volley_version = "1.0.0"
     junit_version = "4.8.1"
-    android_support_version = "26+"
+    android_support_version = "29.0.0"
     google_play_version = "12.0.1"
     fuel_version = "1.8.0"
     nav_version = "1.0.0-alpha07"
@@ -111,16 +111,16 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$android_support_version"
-    implementation "com.android.support:recyclerview-v7:$android_support_version"
-    implementation "com.android.support:cardview-v7:$android_support_version"
-    implementation "com.android.support:recyclerview-v7:$android_support_version"
-    implementation "com.android.support:support-v4:$android_support_version"
-    implementation "com.android.support:cardview-v7:$android_support_version"
-    implementation "com.android.support:design:$android_support_version"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
 
-    implementation "com.android.support.constraint:constraint-layout:1.1.2"
-    implementation "com.android.support:multidex:1.0.1"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.multidex:multidex:2.0.0'
     implementation "net.danlew:android.joda:2.9.4.2"
     implementation "joda-time:joda-time:2.9.2:no-tzdb"
     implementation "io.swagger:swagger-annotations:$swagger_annotations_version"
@@ -130,9 +130,7 @@ dependencies {
     implementation "com.nostra13.universalimageloader:universal-image-loader:1.9.5"
 
     implementation "org.apache.httpcomponents:httpcore:$httpcore_version"
-    implementation ("org.apache.httpcomponents:httpmime:$httpmime_version") {
-        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
-    }
+    implementation ("org.apache.httpcomponents:httpmime:$httpmime_version")
 
     // Firebase
     implementation "com.google.firebase:firebase-messaging:$google_play_version"
@@ -184,13 +182,13 @@ dependencies {
     implementation group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '3.2.7.Final'
 
     // Serialization
-    compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
 
     testImplementation "junit:junit:$junit_version"
 
     // Jetpack Nav
-    implementation "android.arch.navigation:navigation-fragment-ktx:$nav_version" // use -ktx for Kotlin
-    implementation "android.arch.navigation:navigation-ui-ktx:$nav_version" // use -ktx for Kotlin
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0-rc02' // use -ktx for Kotlin
+    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0-rc02' // use -ktx for Kotlin
 }
 
 apply plugin: "com.google.gms.google-services"
