start work on event feedback
Implements most of the UI. Also includes a version bump for the nav component

todo:
- make the submit button actually submit
- add rating component
- fix connection from Event Item

ref: #289

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: "com.android.application"
 apply plugin: 'io.fabric'
 apply plugin: "kotlin-android"
 apply plugin: 'kotlinx-serialization'
-apply plugin: "androidx.navigation.safeargs"
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion 29
