--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,34 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="org.eurofurence.connavigator">
 
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <!-- Main entry point of the application -->
     <application
-            android:name=".app.ConnavigatorApplication"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:logo="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+        android:name=".app.ConnavigatorApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:logo="@mipmap/ic_launcher"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
 
-        <activity android:name=".ui.activities.SettingsActivity"/>
-
-        <activity android:name=".ui.activities.NavActivity"
+        <activity
+            android:name=".ui.activities.NavActivity"
             android:label="Eurofurence"
             android:noHistory="true"
-            android:theme="@style/AppTheme"
-            >
+            android:theme="@style/AppTheme">
             <nav-graph android:value="@navigation/nav_graph" />
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
@@ -36,32 +33,34 @@
 
         <!-- Service providing a detached retrieval of data from the internet. -->
         <service
-                android:name=".services.UpdateIntentService"
-                android:exported="false"/>
+            android:name=".services.UpdateIntentService"
+            android:exported="false" />
 
-        <service android:name=".services.InstanceIdService"
-                 android:exported="false" >
+        <service
+            android:name=".services.InstanceIdService"
+            android:exported="false">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
 
         <service
-                android:name=".services.PushListenerService"
-                android:exported="false">
+            android:name=".services.PushListenerService"
+            android:exported="false">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
         <!-- Pending intents -->
-        <receiver android:name=".notifications.NotificationPublisher"/>
+        <receiver android:name=".notifications.NotificationPublisher" />
         <receiver android:name=".events.EventFavoriteBroadcast" />
         <receiver android:name=".events.LoginReceiver" />
-        <receiver android:name=".events.LogoutReceiver"/>
+        <receiver android:name=".events.LogoutReceiver" />
         <receiver android:name=".events.ResetReceiver" />
 
-        <meta-data android:name="android.app.shortcuts"
+        <meta-data
+            android:name="android.app.shortcuts"
             android:resource="@xml/shortcuts" />
     </application>
 </manifest>
