--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,7 +114,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -136,7 +135,7 @@ dependencies {
     implementation "com.nostra13.universalimageloader:universal-image-loader:1.9.5"
 
     implementation "org.apache.httpcomponents:httpcore:$httpcore_version"
-    implementation ("org.apache.httpcomponents:httpmime:$httpmime_version")
+    implementation("org.apache.httpcomponents:httpmime:$httpmime_version")
 
     // Firebase
     implementation "com.google.firebase:firebase-messaging:$google_play_version"
@@ -185,6 +184,7 @@ dependencies {
 
     // Observables
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.0.2'
 
     // Pretty time
     implementation group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '3.2.7.Final'
