--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,7 +103,7 @@ ext {
     android_support_version = "29.0.0"
     google_play_version = "12.0.1"
     fuel_version = "1.8.0"
-    nav_version = "1.0.0-alpha07"
+    nav_version = "2.1.0-beta02"
     work_version = "2.1.0"
 }
 
@@ -200,8 +200,8 @@ dependencies {
     testImplementation "junit:junit:$junit_version"
 
     // Jetpack Nav
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0-rc02' // use -ktx for Kotlin
-    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0-rc02' // use -ktx for Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version" // use -ktx for Kotlin
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version" // use -ktx for Kotlin
 
     // WorkManager
     implementation "androidx.work:work-runtime-ktx:$work_version"
