--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,38 +1,55 @@
-apply plugin: "idea"
-apply plugin: "com.android.application"
-apply plugin: 'io.fabric'
-apply plugin: "kotlin-android"
-apply plugin: 'kotlinx-serialization'
-apply plugin: "androidx.navigation.safeargs.kotlin"
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+    id 'com.google.firebase.firebase-perf'
+}
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "29.0.0"
+    compileSdkVersion 33
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 102
         versionName "2.3.3"
-        multiDexEnabled true
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "API_BASE_URL", '"https://app.eurofurence.org"'
         buildConfigField "String", "CONVENTION_IDENTIFIER", '"EF26"'
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     kotlinOptions {
         jvmTarget = "1.8"
     }
 
-    flavorDimensions "what"
-
-    dexOptions {
-        javaMaxHeapSize "4g"
-    }
-
     lintOptions {
         abortOnError false
     }
+
+    packagingOptions {
+        exclude "META-INF/DEPENDENCIES"
+        exclude "META-INF/LICENSE"
+        exclude "META-INF/MANIFEST.MF"
+        exclude "META-INF/NOTICE"
+        exclude "META-INF/maven/com.google.guava/guava/pom.xml"
+        exclude "META-INF/maven/com.google.guava/guava/pom.properties"
+    }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
+    flavorDimensions "what"
 
     buildTypes {
         debug {
@@ -45,29 +62,6 @@ android {
         }
     }
 
-    packagingOptions {
-        exclude "META-INF/DEPENDENCIES"
-        exclude "META-INF/LICENSE"
-        exclude "META-INF/MANIFEST.MF"
-        exclude "META-INF/NOTICE"
-        exclude "META-INF/maven/com.google.guava/guava/pom.xml"
-        exclude "META-INF/maven/com.google.guava/guava/pom.properties"
-
-
-    }
-
-    defaultConfig {
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    testOptions {
-        unitTests.returnDefaultValues = true
-    }
-
-    sourceSets {
-        main.java.srcDirs += "src/main/kotlin"
-        androidTest.java.srcDirs += "src/androidTest/kotlin"
-    }
     productFlavors {
         // Define separate dev and prod product flavors.
         dev {
@@ -94,63 +88,61 @@ ext {
 
     // Dependency versions
     swagger_annotations_version = "1.5.0"
-    gson_version = "2.6.1"
+    gson_version = "2.9.0"
     anko_version = "0.10.8"
-    httpcore_version = "4.4.4"
-    httpmime_version = "4.5.2"
-    volley_version = "1.0.0"
+    httpcore_version = "4.4.11"
+    httpmime_version = "4.5.6"
     junit_version = "4.8.1"
     android_support_version = "29.0.0"
     google_play_version = "12.0.1"
-    fuel_version = "1.8.0"
-    nav_version = "2.1.0-beta02"
-    work_version = "2.1.0"
+    nav_version = "2.5.0"
+    work_version = "2.7.1"
 }
 
 // Embedded swagger
 apply from: "swagger.gradle"
 
 dependencies {
-    testImplementation "junit:junit:4.12"
+    testImplementation "junit:junit:4.13.2"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.6.1'
 
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation "net.danlew:android.joda:2.9.4.2"
     implementation "joda-time:joda-time:2.9.2:no-tzdb"
     implementation "io.swagger:swagger-annotations:$swagger_annotations_version"
     implementation "com.google.code.gson:gson:$gson_version"
 
-    implementation "com.android.volley:volley:${volley_version}"
+    implementation 'com.android.volley:volley:1.2.1'
     implementation "com.nostra13.universalimageloader:universal-image-loader:1.9.5"
 
     implementation "org.apache.httpcomponents:httpcore:$httpcore_version"
     implementation("org.apache.httpcomponents:httpmime:$httpmime_version")
 
     // Firebase
-    implementation "com.google.firebase:firebase-messaging:$google_play_version"
-    implementation "com.google.firebase:firebase-config:$google_play_version"
-    implementation "com.google.firebase:firebase-perf:$google_play_version"
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.1'
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    implementation "com.google.firebase:firebase-messaging"
+    implementation "com.google.firebase:firebase-config"
+    implementation "com.google.firebase:firebase-perf"
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-crashlytics'
 
     // Photoview
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
-    implementation 'us.feras.mdv:markdownview:1.1.0'
+
+    // Markdown view.
+    implementation "io.noties.markwon:core:4.6.2"
 
     // Promises
     implementation 'nl.komponents.kovenant:kovenant-core:3.3.0'
@@ -159,16 +151,16 @@ dependencies {
     implementation 'nl.komponents.kovenant:kovenant-jvm:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-functional:3.3.0'
 
-    // DSL for views
-    implementation "org.jetbrains.anko:anko-sdk15:$anko_version" // sdk19, sdk21, sdk23 are also available
-    implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
-    implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
-    implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version" // For appcompat-v7 bindings
-    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
-    implementation "org.jetbrains.anko:anko-design:$anko_version"
+//    // DSL for views
+//    implementation "org.jetbrains.anko:anko-sdk15:$anko_version" // sdk19, sdk21, sdk23 are also available
+//    implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
+//    implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
+//    implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version" // For appcompat-v7 bindings
+//    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
+//    implementation "org.jetbrains.anko:anko-design:$anko_version"
 
     // Kandroid for easier components
-    implementation 'com.pawegio.kandroid:kandroid:0.7.0@aar'
+    implementation 'com.github.pawegio:kandroid:0.8.7@aar'
 
     //  Circular progress that don't make me consider suicide
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
@@ -180,12 +172,8 @@ dependencies {
     implementation "com.chibatching.kotpref:enum-support:2.6.0"
 
     // Fuel for networking
-    implementation "com.github.kittinunf.fuel:fuel:$fuel_version" //for JVM
-    implementation "com.github.kittinunf.fuel:fuel-android:$fuel_version" //for Android
-
-    // Font awesome
-    implementation 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.1'
-    implementation 'info.androidhive:fontawesome:0.0.5'
+    implementation "com.github.kittinunf.fuel:fuel:2.3.1" //for JVM
+    implementation "com.github.kittinunf.fuel:fuel-android:2.3.1" //for Android
 
     // Observables
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
@@ -193,9 +181,6 @@ dependencies {
 
     // Pretty time
     implementation group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '3.2.7.Final'
-
-    // Serialization
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
 
     testImplementation "junit:junit:$junit_version"
 
@@ -207,10 +192,4 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$work_version"
     implementation "androidx.work:work-runtime:$work_version"
     implementation "androidx.work:work-rxjava2:$work_version"
-}
-
-apply plugin: "com.google.gms.google-services"
-apply plugin: 'com.google.firebase.firebase-perf'
-repositories {
-    mavenCentral()
 }
