--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.3.10"
-    ext.serialization_version = '0.9.0'
+    ext.kotlin_version = "1.7.0"
+    ext.serialization_version = '1.3.3'
+    ext.nav_version = "2.5.0"
+    ext.gms_version = '4.3.13'
+    ext.crashlytics_version = '2.9.1'
+    ext.perf_version = '1.4.1'
 
     repositories {
-        jcenter()
-        maven { url 'https://maven.fabric.io/public' }
-        maven { url "https://kotlin.bintray.com/kotlinx" }
-        google ()
+        google()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath 'com.google.gms:google-services:3.2.1'
-        classpath 'com.google.firebase:firebase-plugins:1.1.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
-        classpath 'io.fabric.tools:gradle:1.25.4'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-beta02"
-    }
-}
 
-wrapper {
-    gradleVersion = '5.1.1'
-    distributionUrl = distributionUrl.replace("bin", "all")
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.2.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        classpath "com.google.gms:google-services:$gms_version"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:$crashlytics_version"
+        classpath "com.google.firebase:perf-plugin:$perf_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
+    }
 }
 
 allprojects {
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
         maven { url "https://jitpack.io" }
-        maven { url 'https://maven.google.com/' }
-        maven { url "https://kotlin.bintray.com/kotlinx" }
     }
 }
 
