--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,13 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-org.gradle.daemon=true
-org.gradle.parallel=true
+# org.gradle.daemon=true
+# org.gradle.parallel=true
+
 org.gradle.jvmargs=-Xmx12G -XX:MaxPermSize=2G -XX:+HeapDumpOnOutOfMemoryError
+
 android.useAndroidX=true
+# Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style=official
